Improve support for MATLAB v4 data management agent. Add libpng to 3rd party libraries.
MATLAB v4 store agent now can overwrite variable that shrink/grow in size without
damaging the data that immediately follows the variable being rewritten.
Removed some Windows dependencies related to filesystem management by switching to C++17 standard.
NOTE: currently sol2 fails with C++1z due to certain deprecations in codecvt, so preprocessor definition
_SILENCE_CXX17_CODECVT_HEADER_DEPRECATION_WARNING is required to compiler properly. Currently, this definition is
defined globally for the whole project. Consider moving only to those parts that use sol2 (might be a bit of a headache,
but avoids compatibility issues in the future)

Former-commit-id: b900499c136d5180bede1ec14ed95093f9ceb3a4

--- a/ox_wrapper/settings.json
+++ b/ox_wrapper/settings.json
@@ -6,7 +6,8 @@
 	 "ox_wrapper/ray_casters/ptx",
 	 "ox_wrapper/rendering_passes/ptx",
 	 "ox_wrapper/shapes/ptx",
-	 "ox_wrapper/materials/ptx"
+	 "ox_wrapper/materials/ptx",
+	 "../demos/gomos/"
 	],
 "context_stack_size": 8192
 }
