--- a/property_sheets/_3rd_party.props
+++ b/property_sheets/_3rd_party.props
@@ -10,6 +10,9 @@
     <Link>
       <AdditionalDependencies>lua.lib;ox_wrapper.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <ClCompile>
+      <PreprocessorDefinitions>_SILENCE_CXX17_CODECVT_HEADER_DEPRECATION_WARNING;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+    </ClCompile>
   </ItemDefinitionGroup>
   <ItemGroup />
 </Project>
