--- a/property_sheets/ox_wrapper_release_x64.props
+++ b/property_sheets/ox_wrapper_release_x64.props
@@ -5,6 +5,10 @@
   <PropertyGroup>
     <IncludePath>$(SolutionDir)/ox_wrapper;$(IncludePath)</IncludePath>
   </PropertyGroup>
-  <ItemDefinitionGroup />
+  <ItemDefinitionGroup>
+    <ClCompile>
+      <AdditionalOptions>/std:c++17 /bigobj %(AdditionalOptions)</AdditionalOptions>
+    </ClCompile>
+  </ItemDefinitionGroup>
   <ItemGroup />
 </Project>
