MATLAB v4 data store agent now supports ovewrite of variables with grown/shrunk sizes
Former-commit-id: 0a14a0876976f1c3646251f0b6a89984c4696ae9

--- a/property_sheets/_3rd_party.props
+++ b/property_sheets/_3rd_party.props
@@ -11,7 +11,7 @@
       <AdditionalDependencies>lua.lib;ox_wrapper.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <ClCompile>
-      <PreprocessorDefinitions>_SILENCE_CXX17_CODECVT_HEADER_DEPRECATION_WARNING;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemGroup />
