Gomos demo case is fully functional
Detailed updates are as follows:
- Optix updates to 5.1.0
- Scattering and absorption shader inputs are changed to floats. Note that currently there is no way to pass an integers
  from Lua side to the CPP side: even though there is an interface for doing that, all Lua variables are treated as floats,
  so an explicit parameter to force conversion should be provided.
- Scattering shaders are currently disabled and were not tested properly.
- Added postprocessing MATLAB script for the Gomos data output and comparison versus the reference Gomos data.

Former-commit-id: 52d1a2a7023d43247c2ad0d6d78ccec71b9c74c1

--- a/ox_wrapper/settings.json
+++ b/ox_wrapper/settings.json
@@ -6,8 +6,7 @@
 	 "ox_wrapper/ray_casters/ptx",
 	 "ox_wrapper/rendering_passes/ptx",
 	 "ox_wrapper/shapes/ptx",
-	 "ox_wrapper/materials/ptx",
-	 "../demos/gomos/"
+	 "ox_wrapper/materials/ptx"
 	],
 "context_stack_size": 8192
 }
