--- a/.gitattributes
+++ b/.gitattributes
@@ -40,3 +40,6 @@ _3rd_party/CUDA/v9.1/bin/cudafe.exe filter=lfs diff=lfs merge=lfs -text
 _3rd_party/CUDA/v9.1/bin/cuda-memcheck.exe filter=lfs diff=lfs merge=lfs -text
 _3rd_party/CUDA/v9.1/bin/cusolver64_91.dll filter=lfs diff=lfs merge=lfs -text
 _3rd_party/CUDA/v9.1/bin/nvblas64_91.dll filter=lfs diff=lfs merge=lfs -text
+_3rd_party/**/*.dll filter=lfs diff=lfs merge=lfs -text
+demos/**/*.mat filter=lfs diff=lfs merge=lfs -text
+demos/**/*.png filter=lfs diff=lfs merge=lfs -text
