--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 _3rd_party/**/*.dll filter=lfs diff=lfs merge=lfs -text
+_3rd_party/**/*.exe filter=lfs diff=lfs merge=lfs -text
 demos/**/*.mat filter=lfs diff=lfs merge=lfs -text
 demos/**/*.png filter=lfs diff=lfs merge=lfs -text
