add *.ptx files to .gitignore
Former-commit-id: ff992be0610cfe2c5b5ee917e1a673d0596285bd

--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@
 *.lai
 *.la
 *.a
-#*.lib
+*.lib
 !_3rd_party/**/*.lib
 
 # Executables
@@ -53,5 +53,8 @@
 # MATLAB data files
 *.mat
 !demos/**/*.mat
+
+# Compiled CUDA files
+*.ptx
 
 
