Resolve exception complaining about OptiX context validation failure
— OptiX context validation is no longer performed immediately after
initialization of the context as this was causing exception complaining
that there was no ray generation shaders attached to the context at that
point (which was expected as they were getting attached later). Instead,
the validation is now performed at the very final stage, right before
launching the ray tracing

— Project properties altered to automatically copy OptiX DLL into the
target compilation directory

— Slightly modified demo/gomos bat launch script hoping it would finally
work outside of visual studio. It gets there, but still silently fails
due to some uncaught (or eaten?) exception


Former-commit-id: 6d5e2e7b69bf8f9f35486f449f73201bb56b8029

--- a/property_sheets/ra_debug_x64.props
+++ b/property_sheets/ra_debug_x64.props
@@ -5,6 +5,8 @@
   <PropertyGroup>
     <IncludePath>$(SolutionDir)/ra;$(IncludePath)</IncludePath>
     <_PropertySheetDisplayName>ra_debug_x64</_PropertySheetDisplayName>
+    <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\</OutDir>
+    <PostBuildEventUseInBuild>true</PostBuildEventUseInBuild>
   </PropertyGroup>
   <ItemDefinitionGroup>
     <ClCompile>
@@ -14,6 +16,12 @@
     <Link>
       <AdditionalDependencies>lua.lib;ra.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <PostBuildEvent>
+      <Command>xcopy "$(SolutionDir)_3rd_party\OptiX SDK 5.1.0\bin64\optix.51.dll" "$(OutDir)" /y /f</Command>
+    </PostBuildEvent>
+    <PostBuildEvent>
+      <Message>copy OptiX 5.1 dynamic-link library</Message>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup />
 </Project>
