--- a/property_sheets/ra_release_x64.props
+++ b/property_sheets/ra_release_x64.props
@@ -14,6 +14,10 @@
     <Link>
       <AdditionalDependencies>lua.lib;ra.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <PostBuildEvent>
+      <Command>xcopy "$(SolutionDir)_3rd_party\OptiX SDK 5.1.0\bin64\optix.51.dll" "$(OutDir)" /y /f</Command>
+      <Message>copy OptiX 5.1 dynamic-link library</Message>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup />
 </Project>
