Fix minor CMake issues

--- a/ra_processor/CMakeLists.txt
+++ b/ra_processor/CMakeLists.txt
@@ -23,10 +23,11 @@ source_group(TREE ${_src_root_path} PREFIX "Source files" FILES ${_sources_list}
 source_group(TREE ${_src_root_path} PREFIX "Header files" FILES ${_headers_list})
 
 target_link_directories(${_target} PUBLIC "${CUDA_TOOLKIT_ROOT_DIR}/lib/x64/")
-target_link_libraries(${_target} PRIVATE "${CMAKE_BINARY_DIR}/ra/$<CONFIG>/ra_library.lib")
-target_link_libraries(${_target} PRIVATE "${CMAKE_BINARY_DIR}/_3rd_party/lua/$<CONFIG>/lua.lib")
+target_link_directories(${_target} PRIVATE "${CMAKE_BINARY_DIR}/ra/$<CONFIG>")
+target_link_directories(${_target} PRIVATE "${CMAKE_BINARY_DIR}/_3rd_party/lua/$<CONFIG>")
 target_link_libraries(${_target} PRIVATE "cuda.lib" "cudart.lib")
 target_link_libraries(${_target} PRIVATE "${optix_LIBRARY}")
+target_link_libraries(${_target} PRIVATE ra_library lua)
 
 target_include_directories(${_target} PRIVATE "${CMAKE_SOURCE_DIR}/_3rd_party/tclap/include")
 target_include_directories(${_target} PRIVATE "${CMAKE_SOURCE_DIR}/_3rd_party/sol2")
@@ -34,3 +35,5 @@ target_include_directories(${_target} PRIVATE "${CMAKE_SOURCE_DIR}/_3rd_party/lu
 target_include_directories(${_target} PRIVATE "${CMAKE_SOURCE_DIR}/ra/src")
 target_include_directories(${_target} PRIVATE "${OptiX_INCLUDE}")
 target_include_directories(${_target} PRIVATE "${CUDA_TOOLKIT_ROOT_DIR}/include")
+
+file(COPY "${optix_DLL}" DESTINATION "${EXECUTABLE_OUTPUT_PATH}/")
