--- a/ra/CMakeLists.txt
+++ b/ra/CMakeLists.txt
@@ -4,7 +4,6 @@ project(${_project_name})
 
 set(_src_root_path ${PROJECT_SOURCE_DIR})
 set(_target ra_library)
-set(_ptx_target ${_target}_ptx)
 
 file(
     GLOB_RECURSE _cpp_sources_list
@@ -54,13 +53,12 @@ target_include_directories(${_target} PUBLIC "${OptiX_INCLUDE}")
 find_package(Python COMPONENTS Interpreter REQUIRED)
 string(REGEX REPLACE "\\.cu(;|$)" ".ptx\\1" _cuda_compiled_ptx_files ${_cuda_sources_list})
 
-add_custom_target(
-    ${_ptx_target}
+add_custom_command(
+    TARGET ${_target}
+    PRE_BUILD
     COMMAND ${Python_EXECUTABLE} "${_src_root_path}/compile_ptx.py" --sources "\"${_cuda_sources_list}\"" --ccbin \"${CUDA_HOST_COMPILER}\" --nvcc "\"${CUDA_TOOLKIT_ROOT_DIR}/bin/nvcc.exe\"" --nvcc_opts \"-arch=compute_60 -code=sm_60 -m64 -rdc=true\" --include-directories "\"${OptiX_INSTALL_DIR}/include;${_src_root_path}/src/\"" --header "\"${_src_root_path}/src/ptx.h\"" --settings "\"${_src_root_path}/settings.json\"" --xcompiler \" -D_ALLOW_COMPILER_AND_STL_VERSION_MISMATCH\" 
     COMMENT "Compiling OptiX Shaders"
 )
-set_target_properties(${_ptx_target} PROPERTIES FOLDER HiddenTargets)
-add_dependencies(${_target} ${_ptx_target})
 
 
 
