Begin implementation of textures

--- a/ra/CMakeLists.txt
+++ b/ra/CMakeLists.txt
@@ -38,6 +38,7 @@ if(MSVC)
 endif()
 
 target_include_directories(${_target} PRIVATE "${_src_root_path}/src")
+target_include_directories(${_target} PRIVATE "${CMAKE_SOURCE_DIR}/_3rd_party/")
 target_include_directories(${_target} PRIVATE "${CMAKE_SOURCE_DIR}/_3rd_party/sol2")
 target_include_directories(${_target} PRIVATE "${CMAKE_SOURCE_DIR}/_3rd_party/lua")
 
