--- a/ra_processor/CMakeLists.txt
+++ b/ra_processor/CMakeLists.txt
@@ -7,13 +7,13 @@ set(_target ${_project_name})
 
 file(
     GLOB_RECURSE _sources_list
-    CONFIGURE_DEPENDS TRUE
+    CONFIGURE_DEPENDS
     "${_src_root_path}/*.c" "${_src_root_path}/*.cpp"
 )
 
 file(
     GLOB_RECURSE _headers_list
-    CONFIGURE_DEPENDS TRUE
+    CONFIGURE_DEPENDS
     "${_src_root_path}/*.h" "${_src_root_path}/*.hpp"
 )
 
@@ -22,19 +22,11 @@ add_executable(${_target} ${_sources_list})
 source_group(TREE ${_src_root_path} PREFIX "Source files" FILES ${_sources_list})
 source_group(TREE ${_src_root_path} PREFIX "Header files" FILES ${_headers_list})
 
-target_link_directories(${_target} PUBLIC "${CUDA_TOOLKIT_ROOT_DIR}/lib/x64/")
 target_link_directories(${_target} PRIVATE "${CMAKE_BINARY_DIR}/ra/$<CONFIG>")
-target_link_directories(${_target} PRIVATE "${CMAKE_BINARY_DIR}/_3rd_party/lua/$<CONFIG>")
-target_link_libraries(${_target} PRIVATE "cuda.lib" "cudart.lib")
-target_link_libraries(${_target} PRIVATE "${optix_LIBRARY}")
-target_link_libraries(${_target} PRIVATE ra_library lua)
+target_link_libraries(${_target} PRIVATE ra_library)
 
 target_include_directories(${_target} PRIVATE "${CMAKE_SOURCE_DIR}/_3rd_party/tclap/include")
-target_include_directories(${_target} PRIVATE "${CMAKE_SOURCE_DIR}/_3rd_party/sol2")
-target_include_directories(${_target} PRIVATE "${CMAKE_SOURCE_DIR}/_3rd_party/lua")
 target_include_directories(${_target} PRIVATE "${CMAKE_SOURCE_DIR}/ra/src")
-target_include_directories(${_target} PRIVATE "${OptiX_INCLUDE}")
-target_include_directories(${_target} PRIVATE "${CUDA_TOOLKIT_ROOT_DIR}/include")
 
 file(COPY "${optix_DLL}" DESTINATION "${EXECUTABLE_OUTPUT_PATH}/")
 file(COPY "${_project_name}.args.json" DESTINATION "${EXECUTABLE_OUTPUT_PATH}/")
